--- a/sokohub/templates/account/login.html
+++ b/sokohub/templates/account/login.html
@@ -1,12 +1,29 @@
-<form method="POST" action='login/'>
-    {% csrf_token %}
+{% extends 'base.html' %}
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="user_email">
+{% block title %}Login - SokoHub{% endblock %}
 
-    <label for="password">Password: </label>
-    <input type="text" id="password" name='user_password' />
-
-
-    <button type="submit">Submit</button>
-</form>
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow-sm">
+            <div class="card-header">
+                <h2 class="mb-0">Login</h2>
+            </div>
+            <div class="card-body">
+                <form method="POST">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" name="user_email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" name='user_password' required />
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
