Creating the model for vendor to see his products and fixing bugs

--- a/sokohub/templates/account/vendor_page.html
+++ b/sokohub/templates/account/vendor_page.html
@@ -4,7 +4,13 @@
 
 <body>
 
-    {% extends '../products/index.html'%}
+{% extends '../products/index.html' %}
+
+{% block content %}
+    <a href="{% url 'my_products' %}">My products</a>
+{% endblock %}
+
+
 
 </body>
 
