--- a/sokohub/templates/products/index.html
+++ b/sokohub/templates/products/index.html
@@ -1,3 +1,19 @@
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Site</title>
+</head>
+<body>
+    <div id="main-content">
+        {% block content %}
+        {% endblock %}
+    </div>
+</body>
+</html>
+
 <section>
     <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
         {% csrf_token %}
