Creating orders and fixing bugs

--- a/sokohub/templates/orders/index.html
+++ b/sokohub/templates/orders/index.html
@@ -8,5 +8,6 @@
             <input type="text" name="order_delivery_address" placeholder="Order address" />
             <button type="submit">Initiate Payment</button>
         </form>
+        <a href="{% url 'my_orders' %}">My orders</a>
     </body>
 </html>
