--- a/sokohub/templates/products/products.html
+++ b/sokohub/templates/products/products.html
@@ -1,19 +1,27 @@
 <html>
-    <body>
-        <h2>Products</h2>
-        <form method="POST" action="{% url 'add_order_item' %}">
-            {% csrf_token %}
-        {%for product in products%}
-        <div>
-            <h2>Name:</h2>{{ product.name }}
-            <p>Description: </p>{{ product.description }}
-            <p>Price: </p> {{ product.price }}
-            Order id: <input type="text" name="order_id" placeholder="Order Id" /> <br>
-            Quantity: <input type="number" min="1" value="product_quantity" />
-            <input type="hidden" value="{{product.product_id}}" />
-            <button type="submit">Add To Order</button>
-        </div>
-        {% endfor %}
+<body>
+    <h2>Products</h2>
+    
+    {% for product in products %}
+
+    <form method="POST" action="{% url 'add_order_item' %}">
+        {% csrf_token %}
+
+        <h3>{{ product.name }}</h3>
+        <p>{{ product.description }}</p>
+        <p>{{ product.price }}</p>
+
+        Order id:
+        <input type="text" name="order_id" placeholder="Order Id">
+
+        <input type="hidden" name="product_id" value="{{ product.product_id }}">
+
+        Quantity:
+        <input type="number" name="product_quantity" min="1" value="1">
+
+        <button type="submit">Add To Order</button>
     </form>
-    </body>
+
+    {% endfor %}
+</body>
 </html>
