Testing the app and adding the new migrations

--- a/sokohub/templates/orders/customer/my_orders.html
+++ b/sokohub/templates/orders/customer/my_orders.html
@@ -1,4 +1,4 @@
-{% extends '../customer/products/navbar.html' %}
+{% extends '../../products/customer/navbar.html' %}
 
 {% block content %}
 <div class="container mt-4">
