--- a/sokohub/templates/orders/index.html
+++ b/sokohub/templates/orders/index.html
@@ -1,4 +1,4 @@
-{% extends '../products/navbar.html' %}
+{% extends '../products/customer/navbar.html' %}
 
 {% block content %}
 <form method="POST" action="{% url 'create_order' %}">
