--- a/sokohub/templates/products/customer/products.html
+++ b/sokohub/templates/products/customer/products.html
@@ -34,7 +34,7 @@
             {% for product in products %}
                 <div class="col-md-4">
                     <div class="card product-card h-100">
-                        <img src="{% if product.image %}{{ product.image.url }}{% else %}https://via.placeholder.com/300x200?text=No+Image{% endif %}" class="card-img-top" alt="{{ product.name }}">
+                        <img src="{% if product.image %}{{ product.image }}{% else %}https://via.placeholder.com/300x200?text=No+Image{% endif %}" class="card-img-top" alt="{{ product.name }}">
                         
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">{{ product.name }}</h5>
