--- a/sokohub/templates/orders/customer/my_orders.html
+++ b/sokohub/templates/orders/customer/my_orders.html
@@ -1,4 +1,5 @@
 {% extends '../../products/customer/navbar.html' %}
+{% comment %} {% load math_filters %}  Include your custom filter to calculate subtotal {% endcomment %}
 
 {% block content %}
 <div class="container mt-4">
@@ -20,35 +21,16 @@
                         </div>
 
                         <button class="btn btn-primary btn-sm"
+                                type="button" 
                                 data-bs-toggle="collapse"
-                                data-bs-target="#items{{ order.id }}">
-                            View Items
+                                data-bs-target="#items{{ order.order_id }}" 
+                                aria-expanded="false" 
+                                aria-controls="items{{ order.order_id }}">
+                            <a href="{% url 'order_items' %}?order_id={{ order.order_id }}" 
+                       class="btn btn-primary btn-sm">
+                        View Items
+                    </a>
                         </button>
-                    </div>
-
-                    <div id="items{{ order.id }}" class="collapse mt-3">
-
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Product</th>
-                                    <th>Qty</th>
-                                    <th>Price</th>
-                                    <th>Subtotal</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in order.items.all %}
-                                    <tr>
-                                        <td>{{ item.product.name }}</td>
-                                        <td>{{ item.quantity }}</td>
-                                        <td>{{ item.price }}</td>
-                                        <td>{{ item.quantity }}</td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-
                     </div>
 
                 </div>
