--- a/sokohub/templates/products/customer/navbar.html
+++ b/sokohub/templates/products/customer/navbar.html
@@ -3,6 +3,7 @@
 <head>
     <title>{% block title %}SokoHub{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
         body {
@@ -96,7 +97,10 @@
                     <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="{% url 'create_order' %}">Orders</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        {% comment %} <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li> {% endcomment %}
+                        <li><a 
+                            class="dropdown-item" 
+                            {% comment %} href="{% url 'logout' %}" {% endcomment %}
+                            >Logout</a></li>
                     </ul>
                 </li>
             </ul>
