Creating the customer to see his oerderItems in a certain order

--- a/sokohub/templates/orders/customer/order_items.html
+++ b/sokohub/templates/orders/customer/order_items.html
@@ -1,5 +1,5 @@
 {% extends '../../products/customer/navbar.html' %}
-{% comment %} {% load math_filters %} {% endcomment %}
+{% load math_filters %}
 
 {% block title %}Order Items - #{{ order.order_id }}{% endblock title %}
 
