creating the landing page

--- a/sokohub/templates/products/customer/products.html
+++ b/sokohub/templates/products/customer/products.html
@@ -18,16 +18,8 @@
 </div>
 
 <div class="container mt-4">
-    <div class="hero">
-        <div>
-            <h1>Welcome to SokoHub</h1>
-            <p class="lead">Shop Smart. Shop Fast. Shop Anywhere.</p>
-        </div>
-    </div>
-</div>
-
 <div class="container mt-5" id="products">
-    <h2 class="category-title">Available Products</h2>
+    <h1 class="category-title text-center">Available Products</h1>
     <div class="row g-4 mt-2">
 
         {% if products %}
