--- a/sokohub/templates/account/login.html
+++ b/sokohub/templates/account/login.html
@@ -10,6 +10,14 @@
                 <h2 class="mb-0">Login</h2>
             </div>
             <div class="card-body">
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    {% endfor %}
+                {% endif %}
                 <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
