--- a/sokohub/templates/products/customer/navbar.html
+++ b/sokohub/templates/products/customer/navbar.html
@@ -88,19 +88,31 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link active" href="{% url 'all_products' %}">Home</a></li>
+                {% if user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'create_order' %}">Orders</a></li>
+                {% endif %}
             </ul>
 
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">👤 Customer</a>
                     <ul class="dropdown-menu dropdown-menu-end">
+                        {% if user.is_authenticated %}
                         <li><a class="dropdown-item" href="{% url 'create_order' %}">Orders</a></li>
+                        {% endif %}
                         <li><hr class="dropdown-divider"></li>
+                        {% if not user.is_authenticated %}
+                         <li><a class="dropdown-item" href="{% url 'user-login' %}">Login</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                         <li><a class="dropdown-item" href="{% url 'account-create' %}">Register</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        {% endif %}
+                        {% if user.is_authenticated %}
                         <li><a 
                             class="dropdown-item" 
-                            {% comment %} href="{% url 'logout' %}" {% endcomment %}
+                            href="{% url 'user-logout' %}" 
                             >Logout</a></li>
+                        {% endif %}
                     </ul>
                 </li>
             </ul>
