Removing the product quantity in the codes

--- a/sokohub/templates/products/customer/product_details.html
+++ b/sokohub/templates/products/customer/product_details.html
@@ -41,7 +41,7 @@
                     <div class="row mb-4">
                         <div class="col-md-6">
                             <h5 class="fw-bold">Available Quantity</h5>
-                            <p class="fs-4">{{ product.quantity }} units</p>
+                            <p class="fs-4">{{ product.stock }} units</p>
                         </div>
                         <div class="col-md-6">
                             <h5 class="fw-bold">Status</h5>
