--- a/templates/products/vendor_dashboard.html
+++ b/templates/products/vendor_dashboard.html
@@ -5,34 +5,34 @@
 
 <div class="row mb-4">
     <div class="col-md-3">
-        <div class="card text-white bg-primary mb-3">
+        <div class="card dashboard-stat-card bg-primary-gradient mb-3">
             <div class="card-body">
-                <h5 class="card-title">Total Products</h5>
-                <p class="card-text display-4">{{ total_products }}</p>
+                <h5 class="card-title text-white">Total Products</h5>
+                <p class="card-text display-4 text-white">{{ total_products }}</p>
             </div>
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-white bg-success mb-3">
+        <div class="card dashboard-stat-card bg-success-gradient mb-3">
             <div class="card-body">
-                <h5 class="card-title">Active Products</h5>
-                <p class="card-text display-4">{{ active_products }}</p>
+                <h5 class="card-title text-white">Active Products</h5>
+                <p class="card-text display-4 text-white">{{ active_products }}</p>
             </div>
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-white bg-danger mb-3">
+        <div class="card dashboard-stat-card bg-danger-gradient mb-3">
             <div class="card-body">
-                <h5 class="card-title">Out of Stock</h5>
-                <p class="card-text display-4">{{ out_of_stock }}</p>
+                <h5 class="card-title text-white">Out of Stock</h5>
+                <p class="card-text display-4 text-white">{{ out_of_stock }}</p>
             </div>
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card text-white bg-warning mb-3">
+        <div class="card dashboard-stat-card bg-warning-gradient mb-3">
             <div class="card-body">
-                <h5 class="card-title">Pending Orders</h5>
-                <p class="card-text display-4">{{ pending_orders }}</p>
+                <h5 class="card-title text-dark">Pending Orders</h5>
+                <p class="card-text display-4 text-dark">{{ pending_orders }}</p>
             </div>
         </div>
     </div>
