--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,21 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soko Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <style>
         body {
-            padding-top: 56px;
-        }
-
-        .footer {
-            background-color: #f8f9fa;
-            padding: 20px 0;
-            margin-top: 40px;
+            padding-top: 70px;
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">Soko Hub</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -50,7 +46,7 @@
                             class="nav-link {% if request.resolver_match.url_name == 'customer_order_list' %}active{% endif %}"
                             href="{% url 'customer_order_list' %}">My Orders</a></li>
                     {% endif %}
-                    <li class="nav-item"><span class="nav-link text-light">Hi, {{ user.username }}</span></li>
+                    <li class="nav-item"><span class="nav-link">Hi, {{ user.username }}</span></li>
                     <li class="nav-item">
                         <form action="{% url 'logout' %}" method="post" class="d-inline">
                             {% csrf_token %}
